[gd_scene load_steps=3 format=3 uid="uid://k1qdh5t4qimp"]

[ext_resource type="Script" uid="uid://c8qgyb8wy2y05" path="res://scripts/ui/StoryView.gd" id="1_elqb8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnwvq"]
bg_color = Color(0.17254902, 0.24313726, 0.3137255, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 282.0
offset_top = 280.0
offset_right = 322.0
offset_bottom = 320.0
script = ExtResource("1_elqb8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StoryDisplay" type="Panel" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qnwvq")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/StoryDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StoryText" type="RichTextLabel" parent="VBoxContainer/StoryDisplay/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
scroll_following = true

[node name="InputArea" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InputField" type="LineEdit" parent="VBoxContainer/InputArea"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "输入剧情需求..."

[node name="SendButton" type="Button" parent="VBoxContainer/InputArea"]
layout_mode = 2
text = "发送"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
