# scripts/ui/StoryView.gd (é™„åŠ åˆ°MainèŠ‚ç‚¹)
extends Control

@onready var story_text: RichTextLabel = $VBoxContainer/StoryDisplay/MarginContainer/StoryText
@onready var input_field: LineEdit = $VBoxContainer/InputArea/InputField
@onready var send_button: Button = $VBoxContainer/InputArea/SendButton
@onready var status_label: Label = $VBoxContainer/StatusLabel
#@onready var story_engine: StoryEngine = $StoryEngine

var is_currently_processing: bool = false

func _ready():
	# ç¡®è®¤èŠ‚ç‚¹è·¯å¾„æ­£ç¡®
	print("=== StoryView _ready è¢«è°ƒç”¨ ===")
	print("send_button è·¯å¾„: ", send_button.get_path())
	print("StoryEngineGlobal è·¯å¾„: ", StoryEngineGlobal.get_path())
	# è¿æ¥ä¿¡å·
	send_button.pressed.connect(_on_send_pressed)
	input_field.text_submitted.connect(_on_input_submitted)
	# éªŒè¯è¿æ¥
	print("=== ä¿¡å·è¿æ¥éªŒè¯ ===")
	print("send_button æ˜¯å¦å­˜åœ¨: ", send_button != null)
	print("input_field æ˜¯å¦å­˜åœ¨: ", input_field != null)
	print("story_engine æ˜¯å¦å­˜åœ¨: ", StoryEngineGlobal != null)
	
	
	
	StoryEngineGlobal.story_updated.connect(_on_story_updated)
	StoryEngineGlobal.processing_started.connect(_on_processing_started)
	StoryEngineGlobal.processing_finished.connect(_on_processing_finished)
	
	# åˆå§‹æ–‡æœ¬
	story_text.text = "[center][b]æ¬¢è¿æ¥åˆ° StoryWeaver[/b][/center]\n\nè¾“å…¥ä½ æƒ³è¦çš„å‰§æƒ…å‘å±•..."
	status_label.text = "å°±ç»ª"

func _on_send_pressed():
	submit_input()

func _on_input_submitted(_text: String):
	submit_input()

func submit_input():
	print("\n=== submit_input è¢«è°ƒç”¨ ===")
	print("is_currently_processing: ", is_currently_processing)
	if is_currently_processing:
		print("âŒ æ­£åœ¨å¤„ç†ä¸­ï¼Œå¿½ç•¥")
		return
	
	var user_input = input_field.text.strip_edges()
	print("ç”¨æˆ·è¾“å…¥:", user_input)
	if user_input.is_empty():
		print("âŒ è¾“å…¥ä¸ºç©º")
		return
	
	
	
		# ç‰¹æ®ŠæŒ‡ä»¤ï¼šç§»åŠ¨è§’è‰²ï¼ˆ/move åå­— ä½ç½®ï¼‰
	if user_input.begins_with("/move "): 
		var parts = user_input.split(" ")
		if parts.size() == 3:
			StoryEngineGlobal.world_state.update_character_location(parts[1], parts[2])
			append_to_story("\n[color=yellow]ğŸ“ %s ç§»åŠ¨åˆ° %s[/color]\n" % [parts[1], parts[2]])
		else:
			append_to_story("\n[color=red]ç”¨æ³•: /move è§’è‰²å åœ°ç‚¹[/color]\n")
		input_field.text = ""
		return
	
	# ç‰¹æ®ŠæŒ‡ä»¤ï¼šæŸ¥çœ‹ä½ç½®
	if user_input == "/where":
		var locs = StoryEngineGlobal.world_state.character_locations
		var info = "\n[color=cyan]å½“å‰ä½ç½®ï¼š\n"
		for char_name in locs.keys():
			info += "- %s: %s\n" % [char_name, locs[char_name]]
		info += "[/color]\n"
		append_to_story(info)
		input_field.text = ""
		return
		
	# æŒ‡ä»¤3ï¼šå¸®åŠ©
	if user_input == "/help":
		var help_text = """
[color=cyan]å¯ç”¨æŒ‡ä»¤ï¼š
- /move è§’è‰²å åœ°ç‚¹  # ç§»åŠ¨è§’è‰²
- /where            # æŸ¥çœ‹æ‰€æœ‰è§’è‰²ä½ç½®
- /help             # æ˜¾ç¤ºå¸®åŠ©
[/color]
"""
		append_to_story(help_text)
		input_field.text = ""
		return  
	
	print("ç”¨æˆ·è¾“å…¥: ", user_input)
	if user_input.is_empty():
		print("âŒ è¾“å…¥ä¸ºç©º")
		return
	
	# æ˜¾ç¤ºç”¨æˆ·è¾“å…¥
	append_to_story("\n[color=cyan][b]ä½ ï¼š[/b]%s[/color]\n" % user_input)
	
	# æ¸…ç©ºè¾“å…¥æ¡†
	input_field.text = ""
	
	print("å¼€å§‹è°ƒç”¨ StoryEngine.process_player_input...")
	# å¤„ç†
	StoryEngineGlobal.process_player_input(user_input)
	
	
	

func _on_story_updated(narrative: String):
	append_to_story("\n" + narrative + "\n")
	# æ»šåŠ¨åˆ°åº•éƒ¨
	story_text.scroll_to_line(story_text.get_line_count())

func _on_processing_started():
	is_currently_processing = true
	send_button.disabled = true
	status_label.text = "AIæ€è€ƒä¸­..."

func _on_processing_finished():
	is_currently_processing = false
	send_button.disabled = false
	status_label.text = "å°±ç»ª"

func append_to_story(text: String):
	story_text.text += text
